improved swagger documentation
