# routes/advertRoutes.js
@@ -5,29 +5,54 @@ const {
   getAdverts,
   getAdvertById,
   updateAdvert,
-  deleteAdvert
+  deleteAdvert,
 } = require("../controllers/advertController");
 
-const { authenticate, authorizeVendor } = require("../middleware/authMiddleware");
+const {
+  authenticate,
+  authorizeVendor,
+} = require("../middleware/authMiddleware");
 const upload = require("../middleware/uploadMiddleware");
 const { validateAdvert } = require("../middleware/validateAdvert");
 const uploadRecipe = require("../middleware/uploadRecipeMiddleware");
-const { uploadRecipeFile } = require("../controllers/advertController")
-
+const { uploadRecipeFile } = require("../controllers/advertController");
 
 // PUBLIC ROUTES
-router.get("/", getAdverts);             // Get all adverts
-router.get("/:id", getAdvertById);       // Get one advert by ID
+router.get("/", getAdverts); // Get all adverts
+router.get("/:id", getAdvertById); // Get one advert by ID
 
 // PROTECTED ROUTES (for vendors only)
-router.post("/", authenticate, authorizeVendor, validateAdvert, upload.single("image"), postAdvert); // Create advert
-router.put("/:id", authenticate, authorizeVendor, validateAdvert, upload.single("image"), updateAdvert); // Update advert
+
+router.post(
+  "/",
+  authenticate,
+  authorizeVendor,
+  validateAdvert,
+  upload.single("image"),
+  // #swagger.security = [{ "bearerAuth": [] }]
+  postAdvert
+);
+
+
+
+
+router.put(
+  "/:id",
+  authenticate,
+  authorizeVendor,
+  validateAdvert,
+  upload.single("image"),
+  // #swagger.security = [{ "bearerAuth": [] }]
+  updateAdvert
+); // Update advert
 router.delete("/:id", authenticate, authorizeVendor, deleteAdvert); // Delete advert
 
 router.post(
-  "/upload-recipe/:id", authenticate, authorizeVendor,uploadRecipe.single("recipe"), // 'recipe' is the form field name
+  "/upload-recipe/:id",
+  authenticate,
+  authorizeVendor,
+  uploadRecipe.single("recipe"), // 'recipe' is the form field name
   uploadRecipeFile
 );
-
 
 module.exports = router;
